2007-10-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/sndfile-spectrogram.c
    Calculate longer FFTs and then interpolate to the image height.

    * src/kaiser_window_test.c
    Test a longer window length.

    * doc/*
    Add rudimentary documentation.

    * configure.ac src/common.c
    Detect presence of sf_get_info() and SFC_GET_CURRENT_SF_INFO.