@@ -1,3 +1,8 @@
+2009-03-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/window.c
+    Add bounds check before array access.
+
 2007-10-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/sndfile-spectrogram.c
